--- a/style.css
+++ b/style.css
@@ -79,6 +79,134 @@ nav ul li a:hover::after{
 }
 
 
+<!--mySkills-->
+
+
+#about{
+    padding: 80px 0;
+    color:rgb(222, 124, 241);
+}
+.row{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.about-col-1{
+    flex-basis: 35%;
+}
+.about-col-1 img{
+    width: 100%;
+    border-radius: 15px;
+}
+
+.about-col-2{
+    flex-basis: 60%;
+
+}
+
+.sub-title{
+    font-size: 60px;
+    font-weight: 600;
+    color:rgb(222, 124, 241)
+}
+
+.tab-titles{
+    display: flex;
+    margin:20px 0 40px;
+}
+
+.tab-links{
+    margin-right: 50px;
+    font-size: 18px;
+    font-weight: 500;
+    cursor: pointer;
+    position: relative;
+
+}
+
+.tab-links::after{
+    content: '';
+    width: 0;
+    height: 3px;
+    background: rgb(222, 124, 241);
+    position: absolute;
+    left: 0;
+    bottom: -8px;
+    transition: 0.5s;
+
+}
+
+.tab-links.active-link::after{
+    width: 50%;
+
+}
+
+.tab-contents ul li{
+    list-style: none;
+    margin: 10px 0;
+}
+
+.tab-contents ul li span{
+    color: mediumslateblue;
+    font-size: 14px;
+
+
+}
+
+<!--myWork-->
+#myWork{
+    padding: 30px 0;
+
+}
+.work-list{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 40px;
+    margin-top: 50px;
+}
+
+.work-list div{
+    background: #262626;
+    padding: 40px;
+    font-size: 13px;
+    font-weight: 300;
+    border-radius: 10px;
+    transition: background 0.5s, tranform 0.5s;
+}
+
+.work-list div i{
+    font-size: 50px;
+    margin-bottom: 30px;
+
+}
+
+.work-list div h2{
+    font-size: 30px;
+    font-weight: 500;
+    margin-bottom: 15px;
+}
+
+.work-list div a{
+    text-decoration: none;
+    color: aquamarine;
+    font-size: 12px;
+    margin-top: 20px;
+    display: inline-block;
+
+}
+
+.work-list div:hover{
+    background: #262626;
+    transform: translateY(-10px);
+
+}
+
+
+<!--myWork-->
+
+
+
 /*-------contact----*/
 
 #footer {
